Fix CSS height for details; Update code spacing in PhonologyDisplay

--- a/src/components/display/DictionaryDetails/DetailsSection/styles.scss
+++ b/src/components/display/DictionaryDetails/DetailsSection/styles.scss
@@ -6,6 +6,7 @@
 
 .details-menu,
 .details-display {
+  height: 100%;
   max-height: 500px;
   overflow-y: auto;
   overflow-x: hidden;
